Make UI more appealing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Sorting Algorithm Visualizations</title>
+    <link rel="stylesheet" href="style/main.css">
   </head>
   <body>
+    <h1>Sorting Algorithm Visualizations</h1>
+
     <!-- Algorithm selection UI -->
     <label for="algorithm-selection">Choose an algorithm:</label>
     <select id="algorithm-selection">
@@ -12,7 +15,7 @@
     </select>
 
     <!-- Algorithm visualization UI -->
-    <iframe id="visualizer" src="visualizer.html"></iframe>
+    <iframe id="visualizer" src="visualizer.html" seamless></iframe>
 
     <!-- JavaScript logic/dynamic UI -->
     <script src="script/index.js"></script>
