--- a/visualizer.html
+++ b/visualizer.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Algorithm Visualizer</title>
+    <link rel="stylesheet" href="style/main.css">
   </head>
-  <body>
+  <body class="no-margin">
     <!-- Visualization UI -->
     <canvas id="visualization"></canvas>
 
