Add bubble sort

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Algorithm selection UI -->
     <label for="algorithm-selection">Choose an algorithm:</label>
     <select id="algorithm-selection">
+      <option value="bubble">Bubble sort</option>
       <option value="insertion">Insertion sort</option>
       <option value="selection" selected>Selection sort</option>
     </select>
